--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'java'
+    id 'war'
+}
+
+war {
+    archiveFileName = 'app.war'
 }
 
 group 'jazapp-java'
@@ -12,5 +17,6 @@ repositories {
 }
 
 dependencies {
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     testImplementation 'junit:junit:4.12'
 }
