--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 war {
-    archiveFileName = 'app.war'
+    archiveFileName = 'app.war';
 }
 
 group 'pl.jazapp.app'
@@ -17,7 +17,8 @@ repositories {
 }
 
 dependencies {
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation 'javax:javaee-api:8.0'
 
-    testImplementation 'junit:junit:4.12'
+
 }
