--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     implementation 'org.liquibase:liquibase-cdi:3.8.0'
     implementation 'org.springframework.security:spring-security-crypto:5.2.0.RELEASE'
     implementation 'io.github.cdimascio:java-dotenv:5.2.1'
+    implementation 'io.github.cdimascio:java-dotenv:5.2.1'
 
     testImplementation 'junit:junit:4.+'
 }
+
 
 
